--- a/public/resources/styles.css
+++ b/public/resources/styles.css
@@ -654,6 +654,57 @@ ul#productsImageContainer > li a{
   background-position: center center;
 }
 
+/* 項目設定でuitype=19 or 20 の行を広げる*/
+.layoutContent .blockFieldsList ul li.wideField {
+  width: 92%;
+}
+
+/* 項目設定画面の罫線*/
+.layoutContent .blockFieldsList ul li div {
+  height: 100%;
+}
+
+/* 項目設定画面のモバイル表示*/
+.layoutContent .blockFieldsList {
+  display: initial;
+}
+.layoutContent .blockFieldsList ul li > div {
+  display: flex;
+}
+@media (max-width: 768px) { 
+  .layoutContent .blockFieldsList ul {
+    margin-left: 5px;
+  }
+  .layoutContent .blockFieldsList ul li.ui-sortable-handle {
+    width: 90%;
+  }
+  .layoutContent .blockFieldsList ul li div > div.layoutEditFieldLabel {
+  width: calc(100% / 3);
+  }
+  .layoutContent .blockFieldsList ul li div > div.fieldPropertyContainer {
+  width: calc(100% / 3 * 2);
+  }
+  .layoutContent .blockFieldsList ul li div div.fieldPropertyContainer div > span.col-sm-2.actions{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+}
+
+/* 項目設定画面の項目追加ボタン周り*/
+.layoutContent .blockFieldsList ul li.dummyRow  div > span.dragUiText.col-sm-7{
+  text-align: right;
+    padding: 0;
+    padding-right: 20px;
+    margin: auto;
+}
+.layoutContent .blockFieldsList ul li.dummyRow  div > span.col-sm-5{
+  text-align: left;
+    padding: 0;
+    margin: auto;
+}
+
+
 /* 日報の概要・更新履歴(1740pxは文字が重ならない限界値から決定) */
 @media (max-width: 1740px) { 
   .summaryWidgetContainer #updates .updates_timeline > li .update_time {
