--- a/public/resources/styles.css
+++ b/public/resources/styles.css
@@ -936,6 +936,31 @@ ul#productsImageContainer > li a{
   font-size: 12px;
 }
 
+/* レポートのヘッダーを固定する */
+#reportDetails.contents-bottomscroll {
+	max-height: 70vh;
+}
+#reportDetails table tr.blockHeader th{
+  position: sticky;
+  z-index: 1;
+  top: 0;
+
+  border-color: inherit;
+  background-color: inherit;
+  background-image: inherit;
+  background-repeat: inherit;
+}
+#reportDetails table tr.blockHeader th::before {
+  /* stickyにより枠線が消えてしまうため疑似要素に枠線を追加 */
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: -1px;
+  left: 0;
+  border-top: 2px solid white;
+}
+
 /* レコード編集画面のpadding-leftを可変ではなく固定にする */
 @media (min-width: 992px) {
   .editViewPageDiv.viewContent > .content-area {
